force-app/main/default/objects/Contract/fields/Anticipo__c.field-meta.xml
<CustomField>
    <fullName>Anticipo__c</fullName>
    <label>Anticipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>