force-app/main/default/objects/Contract/fields/Control_de_Cambios_No__c.field-meta.xml
<CustomField>
    <fullName>Control_de_Cambios_No__c</fullName>
    <label>Control de Cambios No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>