force-app/main/default/objects/Contract/fields/Cumple_Golden_Rules__c.field-meta.xml
<CustomField>
    <fullName>Cumple_Golden_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cumple Golden Rules</label>
    <type>Checkbox</type>
</CustomField>