force-app/main/default/objects/Contract/fields/Forma_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago__c</fullName>
    <label>Forma de Pago</label>
    <length>100</length>
    <type>Text</type>
</CustomField>