force-app/main/default/objects/Contract/fields/Mantenimiento_Inclu_do__c.field-meta.xml
<CustomField>
    <fullName>Mantenimiento_Inclu_do__c</fullName>
    <label>Mantenimiento Incluído</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>