force-app/main/default/objects/Contract/fields/Modalidad_del_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Modalidad_del_Contrato__c</fullName>
    <label>Modalidad del Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global Fijo</fullName>
            </value>
            <value>
                <fullName>Unitario Fijo</fullName>
            </value>
            <value>
                <fullName>Precio Máximo Garantizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>