force-app/main/default/objects/Contract/fields/Monto__c.field-meta.xml
<CustomField>
    <fullName>Monto__c</fullName>
    <label>Monto</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>