force-app/main/default/objects/Contract/fields/Numero_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Documento__c</fullName>
    <label>Numero de Documento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>