force-app/main/default/objects/Contract/fields/Tipo_de_Documento_Contractual__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Documento_Contractual__c</fullName>
    <label>Tipo de Documento Contractual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrato Nuevo</fullName>
            </value>
            <value>
                <fullName>OC/OT/OS</fullName>
            </value>
            <value>
                <fullName>Control de Cambios</fullName>
            </value>
            <value>
                <fullName>Otro-si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>