force-app/main/default/objects/Contract/fields/Validaci_n_Documento_Contractual__c.field-meta.xml
<CustomField>
    <fullName>Validaci_n_Documento_Contractual__c</fullName>
    <label>Validación Documento Contractual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Golden Rules</fullName>
            </value>
            <value>
                <fullName>Plazo</fullName>
            </value>
            <value>
                <fullName>Monto</fullName>
            </value>
            <value>
                <fullName>Anticipo</fullName>
            </value>
            <value>
                <fullName>Forma de Pago</fullName>
            </value>
            <value>
                <fullName>Modalidad de Contrato</fullName>
            </value>
            <value>
                <fullName>Mantenimiento Incluido</fullName>
            </value>
            <value>
                <fullName>Control de Cambios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>