force-app/main/default/objects/Contract/validationRules/Aprobado_Contrato.validationRule-meta.xml
<ValidationRule>
    <fullName>Aprobado_Contrato</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISPICKVAL( Tipo_de_Documento_Contractual__c , &quot;&quot;),  ISBLANK( Plazo__c ), ISBLANK( Monto__c ),  ISBLANK( Anticipo__c ),  ISBLANK( Forma_de_Pago__c )), ISPICKVAL( Status , &quot;Aprobado&quot;) )</errorConditionFormula>
    <errorMessage>Por favor revise que los siguientes campos se encuentran diligenciados para continuar con el proceso: Tipo de Documento Contractual, Plazo, Monto, Anticipo y Forma de Pago.</errorMessage>
</ValidationRule>