force-app/main/default/objects/Contract/validationRules/Control_Cambios.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_Cambios</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Aprobado&quot;) ,  ISPICKVAL(Tipo_de_Documento_Contractual__c , &quot;Control de Cambios&quot;) , ISBLANK( Control_de_Cambios_No__c ) )</errorConditionFormula>
    <errorMessage>Por favor diligenciar el campo relacionado al control de cambios para poder continuar con el proceso.</errorMessage>
</ValidationRule>