force-app/main/default/objects/Contract/validationRules/PorAprobar_Contrato.validationRule-meta.xml
<ValidationRule>
    <fullName>PorAprobar_Contrato</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISBLANK( Account.Name ),  ISBLANK( Opportunity__c )  ), ISPICKVAL( Status , &quot;Por Aprobar&quot;))</errorConditionFormula>
    <errorMessage>Debe diligenciar todos los campos de la sección &quot;Información General&quot; para poder continuar con el proceso.</errorMessage>
</ValidationRule>